# pytsetmc-api

./: .gitignore  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
src/pytsetmc_api/: __init__.py  cli.py  client.py  exceptions.py  legacy.py  models.py  utils.py
src/pytsetmc_api/services/: __init__.py  base_service.py  data_service.py  market_service.py  price_service.py  stock_service.py  trading_service.py
tests/: test_client.py
tests/services/: test_base_service.py  test_data_service.py  test_market_service.py  test_price_service.py  test_stock_service.py  test_trading_service.py
